<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="vm" type="mahoroba.uruhashi.presentation.dialog.InputNumberDialogViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textInputValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textAlignment="textEnd"
            android:padding="12dp"
            android:text="@{vm.inputValue}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonNum7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/num7"
            android:onClick="@{vm::num7InputCommand}"
            app:layout_constraintTop_toBottomOf="@id/textInputValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonNum8"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonNum8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/num8"
            android:onClick="@{vm::num8InputCommand}"
            app:layout_constraintBaseline_toBaselineOf="@id/buttonNum7"
            app:layout_constraintStart_toEndOf="@id/buttonNum7"
            app:layout_constraintEnd_toStartOf="@id/buttonNum9"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonNum9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/num9"
            android:onClick="@{vm::num9InputCommand}"
            app:layout_constraintBaseline_toBaselineOf="@id/buttonNum7"
            app:layout_constraintStart_toEndOf="@id/buttonNum8"
            app:layout_constraintEnd_toEndOf="parent"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonNum4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/num4"
            android:onClick="@{vm::num4InputCommand}"
            app:layout_constraintTop_toBottomOf="@id/buttonNum7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonNum5"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonNum5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/num5"
            android:onClick="@{vm::num5InputCommand}"
            app:layout_constraintBaseline_toBaselineOf="@id/buttonNum4"
            app:layout_constraintStart_toEndOf="@id/buttonNum4"
            app:layout_constraintEnd_toStartOf="@id/buttonNum6"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonNum6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/num6"
            android:onClick="@{vm::num6InputCommand}"
            app:layout_constraintBaseline_toBaselineOf="@id/buttonNum4"
            app:layout_constraintStart_toEndOf="@id/buttonNum5"
            app:layout_constraintEnd_toEndOf="parent"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonNum1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/num1"
            android:onClick="@{vm::num1InputCommand}"
            app:layout_constraintTop_toBottomOf="@id/buttonNum4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonNum2"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonNum2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/num2"
            android:onClick="@{vm::num2InputCommand}"
            app:layout_constraintBaseline_toBaselineOf="@id/buttonNum1"
            app:layout_constraintStart_toEndOf="@id/buttonNum1"
            app:layout_constraintEnd_toStartOf="@id/buttonNum3"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonNum3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/num3"
            android:onClick="@{vm::num3InputCommand}"
            app:layout_constraintBaseline_toBaselineOf="@id/buttonNum1"
            app:layout_constraintStart_toEndOf="@id/buttonNum2"
            app:layout_constraintEnd_toEndOf="parent"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/numClear"
            android:onClick="@{vm::clearCommand}"
            app:layout_constraintTop_toBottomOf="@id/buttonNum1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonNum2"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonNum0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/num0"
            android:onClick="@{vm::num0InputCommand}"
            app:layout_constraintBaseline_toBaselineOf="@id/buttonClear"
            app:layout_constraintStart_toEndOf="@id/buttonClear"
            app:layout_constraintEnd_toStartOf="@id/buttonNum3"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/OK"
            android:onClick="@{vm::okCommand}"
            app:layout_constraintBaseline_toBaselineOf="@id/buttonClear"
            app:layout_constraintStart_toEndOf="@id/buttonNum0"
            app:layout_constraintEnd_toEndOf="parent"
        />

    </android.support.constraint.ConstraintLayout>
</layout>
